# average

./: .coverage  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/metrics/: __init__.py  averages.py
tests/perf/: test_averages.py  test_averages_perf.py
tests/unit/: test_averages.py
